mlr_2.9:
- SMOTEWrapper: fix a bug where "sw.nn" was not correctly passed down
- classif.blackboost, regr.blackboost: made sure that arg "stump" is passed on
  correctly
- fixed parameter values for WEKA learners IBk, J48, PART, EM, SimpleKMeans,
  XMeans
- fixed a bug that caused hyperparameters to be not passed on correctly in the
  ModelMultiplexer in some cases
- various cleanups that removed unused code
- updated gmean measure and unit test, added reference to formula of gmean
- classif.glmboost, regr.glmboost: add parameters stopintern and trace
- convert data.frame-ish in Task if necessary
- fix bug with NoFeaturesModel and ModelMultiplexer
- clean up randomForestSRC learners
- fix bug with partialPredictions and GGVIS

- new learners
-- surv.cv.CoxBoost

- removed learners
-- surv.optimCoxBoostPenalty

- removed functions
-- getParamSet generic (now in ParamHelpers package)

mlr_2.8:
- Feature filter "univariate" had a bad name, was deprecated and is now called
 "univariate.model.score". The new one also has better defaults.
- (generate/plot)PartialPrediction: added new arg "geom" for tile plots
- small fix for plotBMRSummary
- the ModelMultiplexer inherits its predict.type from the base learners now
- check that learners in an ensemble have the same predict.type
- new function getBMRModels to extract stored models from a benchmark result
- Fixed a bug where several learners from the LiblineaR package
  ("classif.LiblineaRL2LogReg", "classif.LiblineaRL2SVC", "regr.LiblineaRL2L2SVR")
  were calling the wrong value for "type" (0) and thus training the wrong model.
- Fixed a bug where the resampling objects hout, cv2, cv3, cv5, cv10 were not documented
  in the ResampleDesc help page
- regr.xgboost, classif.xgboost: add feval param
- fixed a bug in irace tuning interface with unamed discrete values
- Fixed bugs in "jackknife" and "bootstrap" se estimators for regr.randomForest.
- Added "sd" estimator for regr.randomForest.