@@ -1,5 +1,6 @@
 mlr_2.9:
 - SMOTEWrapper: fix a bug where "sw.nn" was not correctly passed down
+- removed classif.bartMachine and regr.bartMachine because of bugs
 - classif.blackboost, regr.blackboost: made sure that arg "stump" is passed on
   correctly
 - fixed parameter values for WEKA learners IBk, J48, PART, EM, SimpleKMeans,
